emulation: Try to work with newer gperf

Use language=C++ in gperf.

https://bugzilla.gnome.org/show_bug.cgi?id=777904